--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,12 @@
     <title>Abibasss</title>
   </head>
   <body>
+    <!-- <nav class="navbar navbar-dark sticky-top topBar"></nav> -->
     <div class="topBar"></div>
     <nav class="navbar navbar-dark sticky-top">
       <a class="navbar-brand" href="#">
-        <img src="/images/adidas-logo-white.png" width="75" height="75" class="nav-logo d-inline-block align-top" alt=""></a>
+        <img src="/images/adidas-logo-white.png" width="75" height="75" class="nav-logo d-inline-block align-top" alt="">
+      </a>
     </nav>
     <div id="app"></div>
     <script src="bundle.js"></script>
