add details to looks, add topbar, add img carousel

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" href="/bootstrap-4.2.1/css/bootstrap.css">
     <link rel="stylesheet" href="/style/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <title>Abibas</title>
   </head>
   <body>
-    <div class="sticky-top">
+    <!-- <div class="sticky-top">
       <div class="topBar">
         <div class="help white">
           <li> HELP</li>
@@ -38,7 +39,7 @@
           <i class="material-icons md-light">shopping_cart</i>
         </div>
       </div>
-    </div>
+    </div> -->
     <div id="app"></div>
     <script src="bundle.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
